--- a/src/main/resources/templates/user/role-list.html
+++ b/src/main/resources/templates/user/role-list.html
@@ -163,7 +163,7 @@
 {{each(i, item) list}}
 	<tr class="j-che-2" user-id="{{= item.id}}">
          <td>{{= item.id}}</td>
-         <td>{{= item.account}}</td>
+         <td>{{= item.loginName}}</td>
          <td>
              <button type="button" class="btn btn-info btn-xs j-btn-2" id="{{= item.userId}}">可选</button>
          </td>
