--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,9 +1,9 @@
 <header class="main-header">
     <a href="javascript:;" class="logo">
-        <span class="logo-mini">隐匿者后台</span>
-        <span class="logo-lg"><b>隐匿者后台</b></span>
+        <span class="logo-mini">隐匿者</span>
+        <span class="logo-lg"><b>隐匿者</b></span>
     </a>
-    <!-- <input type="hidden" th:value="${user.account}" id="account"/> -->
+    <input type="hidden" th:value="${user.loginName}" id="loginName"/>
     <nav class="navbar navbar-static-top">
         <a href="javascript:;" class="sidebar-toggle" data-toggle="offcanvas" role="button">
             <span class="sr-only">切换导航</span>
