--- a/src/main/resources/templates/left.html
+++ b/src/main/resources/templates/left.html
@@ -38,8 +38,44 @@
                     <span>回帖管理</span>
                 </a> 
             </li>
+            <li>
+                <a href="">
+                    <i class="fa fa-cog"></i>
+                    <span>领域管理</span>
+                </a> 
+            </li>
+            <li>
+                <a href="">
+                    <i class="fa fa-cog"></i>
+                    <span>标签管理</span>
+                </a> 
+            </li>
+            <li>
+                <a href="">
+                    <i class="fa fa-cog"></i>
+                    <span>保留词</span>
+                </a> 
+            </li>
+            <li>
+                <a href="">
+                    <i class="fa fa-cog"></i>
+                    <span>邀请码</span>
+                </a> 
+            </li>
+            <li>
+                <a href="">
+                    <i class="fa fa-cog"></i>
+                    <span>广告管理</span>
+                </a> 
+            </li>
+              <li>
+                <a href="">
+                    <i class="fa fa-cog"></i>
+                    <span>其他管理</span>
+                </a> 
+            </li>
             <li class="">
-                <a th:href="@{/user}">
+                <a href="">
                     <i class="fa fa-cog"></i>
                     <span>系統监控</span>
                 </a>
