新增 菜单管理

--- a/src/main/resources/templates/left.html
+++ b/src/main/resources/templates/left.html
@@ -22,7 +22,7 @@
                         <a th:href="@{/role}"><i class="fa fa-circle-o"></i>角色信息</a>
                     </li>
                     <li>
-                        <a th:href="@{/menu}"><i class="fa fa-circle-o"></i>菜单信息</a>
+                        <a th:href="@{/permissions/index}"><i class="fa fa-circle-o"></i>菜单信息</a>
                     </li>
                 </ul>
             </li>
