--- a/src/main/resources/templates/menu/menu.html
+++ b/src/main/resources/templates/menu/menu.html
@@ -168,7 +168,7 @@
    	    <td>{{= item.type}}</td>
 		<td>
 			<button type="button" roleId="{{= item.id}}" class="btn btn-success btn-xs j-jur to-user">修改</button>
-			<button type="button" roleId="{{= item.id}}" class="btn btn-success btn-xs j-jur to-user">删除</button>
+			<button type="button" roleId="{{= item.id}}" class="btn btn-success btn-xs j-jur to-delete">删除</button>
 		</td>
     </tr>
 {{/each}}
