添加用户注册

--- a/src/main/resources/templates/head.html
+++ b/src/main/resources/templates/head.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" th:href="@{/js/plug-in/dist/css/skins/_all-skins.min.css}"/>
     <link rel="stylesheet" th:href="@{/js/plug-in/layer/css/layer.css}" />
     <link rel="stylesheet" th:href="@{/js/plug-in/font-awesome/css/font-awesome.min.css}" />
+    <link rel="stylesheet" th:href="@{/css/public/public.css}" />
     <!--[if lt IE 9]>
     <script src="http://qingdao.gclasscn.com:3020/edu-static/js/public/htmlshiv.min.js" ></script>
     <script src="http://qingdao.gclasscn.com:3020/edu-static/js/public/selectivizr.min.js" ></script>
