--- a/src/main/resources/templates/user/user-list.html
+++ b/src/main/resources/templates/user/user-list.html
@@ -17,11 +17,11 @@
                         <div class="box">
                             <div class="box-header">
                                  <div class="navbar">
-                                    <!-- <ul class="nav navbar-nav">
-                                        <li class="pull-left j-parent-add">
-                                            <a class="" href="javascript:void(0);">添加多文件上传</a>
+                                     <ul class="nav navbar-nav">
+                                        <li class="pull-left j-user-add">
+                                            <a class="" href="javascript:void(0);">添加用户</a>
                                         </li> 
-                                    </ul> -->
+                                    </ul>
                                 </div>
                                 <div class="row">
                                     <form class="col-xs-3 pull-right">
@@ -97,8 +97,6 @@
 		<td>{{= item.phone}}</td>
 		<td>{{= item.qq}}</td>
 		<td>
-			<button type="button" userId="{{= item.id}}" class="btn btn-success btn-xs j-jur to-edit">修改</button>
-			<button type="button" userId="{{= item.id}}" class="btn btn-success btn-xs j-jur to-deleted">删除</button>
 			<button type="button" userId="{{= item.id}}" class="btn btn-success btn-xs j-jur to-permission">权限</button>
 		</td>
     </tr>
